<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.bergtiger</groupId>
	<artifactId>TigerClaim</artifactId>
	<version>1.5</version>
	<packaging>jar</packaging>

	<name>TigerClaim</name>
	<description>WorldGuardAddOn for player creating Claims</description>

	<properties>
		<mvncompiler.version>3.8.0</mvncompiler.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
		<mvnshade.version>3.2.1</mvnshade.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
		<mvnsource.version>3.0.1</mvnsource.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
		<mvninstall.version>3.0.0-M1</mvninstall.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->

		<module>de.bergtiger.claim</module>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<minecraft.plugin.version>${project.version}</minecraft.plugin.version>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.png</include>
					<include>**/*.yml</include>
					<include>**/*.txt</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>16</source>
					<target>16</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${mvnsource.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>${mvninstall.version}</version>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<!-- Spigot -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<!-- WorldGuard -->
		<repository>
			<id>sk89q-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Spigot API -->
		<!-- You only need one of the two, don't put both. Spigot is recommended. -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- WorldGuard -->
		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-bukkit</artifactId>
			<version>7.0.4</version>
			<scope>provided</scope>
		</dependency>
		<!-- WorldEdit -->
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-core</artifactId>
			<version>7.3.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>